// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavouritesContainer container matches the snapshot on error 1`] = `
Array [
  <div
    className="search"
  >
    <h1>
      Избранное
    </h1>
    <form
      onSubmit={[Function]}
    >
      <input
        className="searchInput"
        name="cityName"
        placeholder="Добавить новый город"
        required="required"
      />
      <button
        className="searchButton"
        type="submit"
      />
    </form>
  </div>,
  <div
    className="FavList"
  >
    <div
      className="FavouriteCity"
    >
      <div
        className="favCityHeader"
      >
        <h1>
          Moscow
        </h1>
        <img
          alt="Иконка погоды"
          src="i1"
        />
        <h1>
          t1
        </h1>
        <button
          className="deleteButton"
          onClick={[Function]}
        >
          X
        </button>
      </div>
      <div
        className="Error"
      >
        <h1>
          Не удалось загрузить данные
        </h1>
      </div>
    </div>
  </div>,
]
`;

exports[`FavouritesContainer container matches the snapshot when favorites cities are loaded 1`] = `
Array [
  <div
    className="search"
  >
    <h1>
      Избранное
    </h1>
    <form
      onSubmit={[Function]}
    >
      <input
        className="searchInput"
        name="cityName"
        placeholder="Добавить новый город"
        required="required"
      />
      <button
        className="searchButton"
        type="submit"
      />
    </form>
  </div>,
  <div
    className="FavList"
  >
    <div
      className="FavouriteCity"
    >
      <div
        className="favCityHeader"
      >
        <h1>
          Moscow
        </h1>
        <img
          alt="Иконка погоды"
          src="i1"
        />
        <h1>
          t1
        </h1>
        <button
          className="deleteButton"
          onClick={[Function]}
        >
          X
        </button>
      </div>
      <div
        className="WeatherInfo"
      >
        <div
          className="Info"
        >
          <h3>
            Ветер
          </h3>
          <h4>
            w1
          </h4>
        </div>
        <div
          className="Info"
        >
          <h3>
            Облачность
          </h3>
          <h4>
            c1
          </h4>
        </div>
        <div
          className="Info"
        >
          <h3>
            Давление
          </h3>
          <h4>
            p1
          </h4>
        </div>
        <div
          className="Info"
        >
          <h3>
            Влажность
          </h3>
          <h4>
            h1
          </h4>
        </div>
        <div
          className="Info"
        >
          <h3>
            Координаты
          </h3>
          <h4>
            l1
          </h4>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`FavouritesContainer container matches the snapshot when favorites cities are loading 1`] = `
Array [
  <div
    className="search"
  >
    <h1>
      Избранное
    </h1>
    <form
      onSubmit={[Function]}
    >
      <input
        className="searchInput"
        name="cityName"
        placeholder="Добавить новый город"
        required="required"
      />
      <button
        className="searchButton"
        type="submit"
      />
    </form>
  </div>,
  <div
    className="FavList"
  >
    <div
      className="FavouriteCity"
    >
      <div
        className="favCityHeader"
      >
        <h1>
          Moscow
        </h1>
        <img
          alt="Иконка погоды"
          src="i1"
        />
        <h1>
          t1
        </h1>
        <button
          className="deleteButton"
          onClick={[Function]}
        >
          X
        </button>
      </div>
      <div
        className="Loader"
      >
        <h1>
          Подождите, данные загружаются
        </h1>
        <div
          className="Spinner"
        />
      </div>
    </div>
  </div>,
]
`;
